--- a/views/application.haml
+++ b/views/application.haml
@@ -7,6 +7,8 @@
 
     %link{ rel: :icon, href: '/favicon.ico', sizes: :any }
     %link{ rel: :icon, href: '/icon.svg', type: 'image/svg+xml' }
+    %link{ rel: :stylesheet, href: '/assets/application.css' }
 
   %body
     = yield
+    %script{ src: '/assets/application.js' }
