Added yarn and pico.css

--- a/views/application.haml
+++ b/views/application.haml
@@ -10,5 +10,6 @@
     %link{ rel: :stylesheet, href: '/assets/application.css' }
 
   %body
-    = yield
+    %main.container
+      = yield
     %script{ src: '/assets/application.js' }
