--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,8 @@
-%h1 Hello
+%h1 UMTS Developer Training
+
+%article
+  %p
+    Here is some text that will describe what is about to happen.
+  %footer
+    %form{ action: '#' }
+      %input{ type: :submit, value: 'Authorize' }
