--- a/config/README.md.erb
+++ b/config/README.md.erb
@@ -8,8 +8,7 @@ Progress for <%= user_name %>
 * [Remaining issues][issues]
 
 Once training is complete, this repository can be archived or deleted on the
-[Settins page][settings]. Or, you can hold on to it
-as a cherished keepsake.
+[Settings page][settings]. Or, you can hold on to it as a cherished keepsake.
 
 ---
 
