Move CSFR token to instance variable

--- a/views/ready.haml
+++ b/views/ready.haml
@@ -20,6 +20,5 @@
 
   %footer
     %form{ method: :post, action: '/create' }
-      - csrf = request.env['rack.session']['csrf']
-      %input{ type: :hidden, name: :authenticity_token, value: csrf }
+      %input{ type: :hidden, name: :authenticity_token, value: @csrf_token }
       %input{ type: :submit, value: 'Create' }
