--- a/views/application.haml
+++ b/views/application.haml
@@ -5,8 +5,10 @@
     %meta{ name: :viewport, content: 'width=device-width, initial-scale=1' }
     %title UMTS Dev Training
 
+    %link{ rel: :manifest, href: '/manifest.webmanifest' }
     %link{ rel: :icon, href: '/favicon.ico', sizes: :any }
     %link{ rel: :icon, href: '/icon.svg', type: 'image/svg+xml' }
+    %link{ rel: 'apple-touch-icon', href: '/apple-touch-icon.png' }
     %link{ rel: :stylesheet, href: asset_path('application.css') }
     %script{ src: asset_path('application.js'), defer: true }
 
