Add a comma [ci skip]

--- a/views/ready.haml
+++ b/views/ready.haml
@@ -12,7 +12,7 @@
       %tt= @repo_name
     and create issues within it for you to complete. We will also invite our
     more experienced developers to collaborate on your training repository.
-    They will be able to comment on your assigned tasks, add tasks and mark
+    They will be able to comment on your assigned tasks, add tasks, and mark
     tasks as complete.
   %p
     %strong
