--- a/views/application.haml
+++ b/views/application.haml
@@ -1,7 +1,7 @@
 !!!
 %html{ lang: 'en-US' }
   %head
-    %meta{ charset: :utf8 }
+    %meta{ charset: 'utf-8' }
     %meta{ name: :viewport, content: 'width=device-width, initial-scale=1' }
     %title UMTS Dev Training
 
