--- a/views/application.haml
+++ b/views/application.haml
@@ -15,3 +15,10 @@
   %body
     %main.container
       = yield
+
+    %footer
+      %a{ href: 'https://www.umass.edu' }
+        &copy; University of Massachusetts Amherst
+      %a{ href: 'https://www.umass.edu/site-policies' } Site Policies
+      %a{ href: 'mailto:transportation-it@groups.umass.edu' } Site Contact
+      %a{ href: 'https://github.com/umts/dev-training-web' } Site Source
