--- a/views/ready.haml
+++ b/views/ready.haml
@@ -7,10 +7,9 @@
     You have successfully authorized our application. The next step is to
     create your training repository and tracking issues.
   %p
-    When you click the button below, we will create the repository,
-    = succeed ',' do
-      %tt= @repo_name
-    and create issues within it for you to complete. We will also invite our
+    When you click the button below, we will create the repository,&#32;
+    %tt>= @repo_name
+    , and create issues within it for you to complete. We will also invite our
     more experienced developers to collaborate on your training repository.
     They will be able to comment on your assigned tasks, add tasks, and mark
     tasks as complete.
