Classless means that `main` is already a container

--- a/views/application.haml
+++ b/views/application.haml
@@ -13,7 +13,7 @@
     %script{ src: asset_path('application.js'), defer: true }
 
   %body
-    %main.container
+    %main
       != yield
 
     %footer
