Switch from `<tt>` to `<code>`
There's a bit more style that I think looks good.

--- a/views/ready.haml
+++ b/views/ready.haml
@@ -8,7 +8,7 @@
     create your training repository and tracking issues.
   %p
     When you click the button below, we will create the repository,&#32;
-    %tt>= @repo_name
+    %code>= @repo_name
     , and create issues within it for you to complete. We will also invite our
     more experienced developers to collaborate on your training repository.
     They will be able to comment on your assigned tasks, add tasks, and mark
