--- a/views/success.haml
+++ b/views/success.haml
@@ -8,4 +8,4 @@
     As you work on UMTS software projects, you can mark your work as addressing
     a particular training task by referring to it by number in a Git commit or
     pull request comment. e.g.
-    %tt #{@repo_resource[:full_name]}#7
+    %code #{@repo_resource[:full_name]}#7
